// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grouped Answer Properties should render the options for each answer 1`] = `
<GroupedAnswerProperties__AnswerTitle
  data-test="answer-title"
>
  Currency 1
</GroupedAnswerProperties__AnswerTitle>
`;

exports[`Grouped Answer Properties should render the options for each answer 2`] = `
<GroupedAnswerProperties__AnswerTitle
  data-test="answer-title"
>
  Currency 2
</GroupedAnswerProperties__AnswerTitle>
`;

exports[`Grouped Answer Properties should render the options for each answer 3`] = `
<GroupedAnswerProperties__AnswerTitle
  data-test="answer-title"
>
  Date 1
</GroupedAnswerProperties__AnswerTitle>
`;

exports[`Grouped Answer Properties should show error if there is a mismatch in the decimals and previous answer validation 1`] = `
Array [
  <Accordion
    key="Currency"
    title="Currency properties"
  >
    <GroupedAnswerProperties__Padding>
      <GroupedAnswerProperties__GroupContainer>
        <InlineField
          id="page-id-currency-decimals"
          label="Decimals"
        >
          <Decimal
            data-test="decimals"
            hasDecimalInconsistency={true}
            id="page-id-currency-decimals"
            onBlur={[Function]}
            value={5}
          />
        </InlineField>
        <GroupedAnswerProperties__ValidationWarning
          icon={[Function]}
        >
          Enter a decimal that is the same as the associated question page
        </GroupedAnswerProperties__ValidationWarning>
      </GroupedAnswerProperties__GroupContainer>
    </GroupedAnswerProperties__Padding>
    <GroupedAnswerProperties__AnswerPropertiesContainer
      key="BasicAnswer1"
    >
      <GroupedAnswerProperties__Padding>
        <GroupedAnswerProperties__AnswerTitle
          data-test="answer-title"
        >
          Currency 1
        </GroupedAnswerProperties__AnswerTitle>
        <AnswerProperties
          answer={
            Object {
              "__typename": "BasicAnswer",
              "displayName": "Currency 1",
              "id": "1",
              "properties": Object {
                "decimals": 5,
                "required": false,
              },
              "type": "Currency",
              "validationErrorInfo": Object {
                "errors": Array [
                  Object {
                    "errorCode": "ERR_REFERENCED_ANSWER_DECIMAL_INCONSISTENCY",
                  },
                ],
              },
            }
          }
        />
        <Memo(AnswerValidation)
          answer={
            Object {
              "__typename": "BasicAnswer",
              "displayName": "Currency 1",
              "id": "1",
              "properties": Object {
                "decimals": 5,
                "required": false,
              },
              "type": "Currency",
              "validationErrorInfo": Object {
                "errors": Array [
                  Object {
                    "errorCode": "ERR_REFERENCED_ANSWER_DECIMAL_INCONSISTENCY",
                  },
                ],
              },
            }
          }
        />
      </GroupedAnswerProperties__Padding>
    </GroupedAnswerProperties__AnswerPropertiesContainer>
    <GroupedAnswerProperties__AnswerPropertiesContainer
      key="BasicAnswer3"
    >
      <GroupedAnswerProperties__Padding>
        <GroupedAnswerProperties__AnswerTitle
          data-test="answer-title"
        >
          Currency 2
        </GroupedAnswerProperties__AnswerTitle>
        <AnswerProperties
          answer={
            Object {
              "__typename": "BasicAnswer",
              "displayName": "Currency 2",
              "id": "3",
              "properties": Object {
                "decimals": 2,
                "required": false,
              },
              "type": "Currency",
            }
          }
        />
        <Memo(AnswerValidation)
          answer={
            Object {
              "__typename": "BasicAnswer",
              "displayName": "Currency 2",
              "id": "3",
              "properties": Object {
                "decimals": 2,
                "required": false,
              },
              "type": "Currency",
            }
          }
        />
      </GroupedAnswerProperties__Padding>
    </GroupedAnswerProperties__AnswerPropertiesContainer>
    <GroupedAnswerProperties__GroupContainer>
      <GroupedAnswerProperties__Padding>
        <GroupValidations
          type="Currency"
          validationError={
            Object {
              "errors": Array [],
              "id": "1",
              "totalCount": 0,
            }
          }
        />
      </GroupedAnswerProperties__Padding>
    </GroupedAnswerProperties__GroupContainer>
  </Accordion>,
  <Accordion
    key="Date"
    title="Date properties"
  >
    <GroupedAnswerProperties__Padding />
    <GroupedAnswerProperties__AnswerPropertiesContainer
      key="BasicAnswer2"
    >
      <GroupedAnswerProperties__Padding>
        <GroupedAnswerProperties__AnswerTitle
          data-test="answer-title"
        >
          Date 1
        </GroupedAnswerProperties__AnswerTitle>
        <AnswerProperties
          answer={
            Object {
              "__typename": "BasicAnswer",
              "displayName": "Date 1",
              "id": "2",
              "properties": Object {
                "decimals": 0,
                "format": "dd/mm/yyyy",
                "required": false,
              },
              "type": "Date",
            }
          }
        />
        <Memo(AnswerValidation)
          answer={
            Object {
              "__typename": "BasicAnswer",
              "displayName": "Date 1",
              "id": "2",
              "properties": Object {
                "decimals": 0,
                "format": "dd/mm/yyyy",
                "required": false,
              },
              "type": "Date",
            }
          }
        />
      </GroupedAnswerProperties__Padding>
    </GroupedAnswerProperties__AnswerPropertiesContainer>
  </Accordion>,
]
`;
